<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_new_to_do"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="edu.msoe.leinoa.midtermtodo.NewToDoActivity">

    <AutoCompleteTextView
        android:id="@+id/title_box_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textAutoComplete"
        android:hint="@string/title_box_hint"
        android:textSize="12pt"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#000000"
        android:layout_marginBottom="12dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#000"
        android:text="@string/date_time_text_label"
        android:textSize="8pt"/>
    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:rowCount="2">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="showTimePickerDialog"
            android:layout_column="0"
            android:layout_row="0"
            android:layout_marginRight="20dp"
            android:text="Set Time"/>
        <TextView
            android:id="@+id/timeText"
            android:text="Time..."
            android:layout_column="1"
            android:layout_row="0"
            android:textSize="7pt"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="showDatePickerDialog"
            android:layout_column="0"
            android:layout_row="1"
            android:layout_marginRight="20dp"
            android:text="Set Date"/>
        <TextView
            android:id="@+id/dateText"
            android:text="Date..."
            android:layout_column="1"
            android:layout_row="1"
            android:textSize="7pt"/>
    </GridLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#000000"
        android:layout_marginBottom="12dp"
        android:layout_marginTop="12dp"/>



    <EditText
        android:id="@+id/description_box_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textLongMessage|text"
        android:hint="@string/todo_box_hint"
        android:layout_marginBottom="5dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="13dp"
        android:layout_marginTop="13dp"
        android:weightSum="3">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="7pt"
            android:text="@string/item_priority_label"
            android:textColor="#000"
            android:layout_weight="1"/>

        <Spinner
            android:id="@+id/priority_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"/>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2">
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/set_todo_item_button"
            android:onClick="saveToDoItem"
            style="@style/Base.Widget.AppCompat.Button.Colored"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Cancel"
            android:onClick="cancelToDoItem"/>
    </LinearLayout>

</LinearLayout>
