<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_to_do_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="edu.msoe.leinoa.midtermtodo.ToDoViewActivity">

    <EditText
        android:id="@+id/todo_view_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/placeholder_text"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"/>

    <EditText
        android:id="@+id/todo_view_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/placeholder_text"
        android:textAppearance="@android:style/TextAppearance.Medium"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="#000"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="4">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/date_due"
            android:textColor="#000"/>
        <View
            android:layout_width="1px"
            android:layout_height="match_parent"
            android:background="#000"
            android:layout_marginRight="5dp"/>
        <TextView
            android:id="@+id/todo_view_due_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="4"
        android:layout_marginTop="9dp">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="Date ToDo Created"
            android:textColor="#000"/>
        <View
            android:layout_width="1px"
            android:layout_height="match_parent"
            android:background="#000"
            android:layout_marginRight="5dp"/>
        <TextView
            android:id="@+id/todo_view_date_created"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="#000"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#efefef"
        android:weightSum="3">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/item_priority_label"
            android:textColor="#000"/>

        <Spinner
            android:id="@+id/todo_view_priority_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="#000"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#efefef"
        android:weightSum="3">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/item_status_text"
            android:textColor="#000"
            android:layout_weight="1"/>

        <Spinner
            android:id="@+id/todo_view_status_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="#000"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Email To..."
        android:background="@android:color/holo_blue_dark"
        android:layout_marginBottom="20px"
        android:onClick="emailToOther"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Delete"
        android:background="#ff5555"
        android:onClick="deleteToDoItem"/>

</LinearLayout>
